--- a/assets/styles/scss/_config/_reset.scss
+++ b/assets/styles/scss/_config/_reset.scss
@@ -70,3 +70,11 @@ video {
   object-fit: cover;
   font-family: 'object-fit: cover;';
 }
+
+p {
+  margin-bottom: $vertical_rhythm;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+}
