--- a/assets/styles/scss/_config/_variables.scss
+++ b/assets/styles/scss/_config/_variables.scss
@@ -69,3 +69,10 @@ $gutter                            : 3;
 | Transition Times                                |
 *************************************************/
 $transition_time                   : 0.3s;
+
+/*************************************************|
+| Misc stuff                                      |
+*************************************************/
+$border_radius                      : 3px;
+$vertical_rhythm                    : 20px;
+$vertical_rhythm_large              : 40px;
